# articlepod

./: .gitignore  2026-06-21T15-04-58-there-are-no-instances-in-atproto-—-overreacted.json  2026-06-21T19-06-52-the-furious-dispute-over-what-caused-air-india-flight-171-to-crash.json  2026-06-21T20-12-16-how-the-high-street-became-a-window-on-our-political-instability.json  2026-06-27T19-04-16-a-peek-into-reddit-s-anti-spam-internals.json  2026-06-28T19-57-01-the-curious-case-of-aa-ns-charter-com.json  2026-06-29T16-52-29-inside-the-advisory-database-and-what-happens-when-vulnerability-volume-breaks-records.json  2026-06-30T17-55-08-soatok-s-informal-guide-to-threat-models---dhole-moments.json  2026-06-30T21-10-04-the-threat-of-residential-proxies.json  2026-07-19T06-31-29-reviewing-ai-code-is-not-a-viable-argument.json  2026-07-19T16-15-47-the-computer-at-the-bottom-of-a-canal.json  README.md  pyproject.toml
.github/workflows/: add-article.yaml  add-episode.yaml  build-rss.yaml  cpu.yaml  generate-episode.yaml  test.yaml
baml_src/: article.baml  clients.baml  generators.baml  tts.baml
src/articlepod/: __main__.py  episode.py  rss.py
src/prompts/sumy/: tts.txt
src/python/: __main__.py  rss.py
src/python/orchestrate/: __init__.py  __main__.py  cli.py  exceptions.py  logger.py  tts.py
src/python/script/: __main__.py
src/python/tts/: __main__.py
tests/: __init__.py  test_cli.py  test_episode.py  test_tts.py
